--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -92,7 +92,7 @@ footer{
 
 .resultsrow{
   background-color: white;
-  /*border: 3px solid #f05f40;*/
+  border: 3px solid #f05f40;*/
   margin-top: 20px;
 }
 
